[package]
authors = [
    'ashWhiteHat<phantomofrotten@gmail.com>',
    'KiriosK<KiriosK@yandex.ru>'
]
name = "zero-crypto"
description = 'Algebra Primitives'
version = "0.1.11"
edition = "2021"
license = "Apache-2.0"
homepage = 'https://github.com/KogarashiNetwork/Kogarashi/'
repository = 'https://github.com/KogarashiNetwork/core/'
readme = 'README.md'

[dependencies]
paste = "1.0.11"
rand_core = { version="0.6.4", default-features = false }
sp-std = { version = '3.0.0', default-features = false }
parity-scale-codec = { version = "2", default-features = false, features = ["derive"] }
dusk-bytes = { version = "0.1" }
subtle = { version = "2.0", default-features = false }

[[test]]
name = "arithmetics"
path = "tests/limbs.rs"
required-features = ["std"]

[features]
default = ["std"]
std = [
    "rand_core/getrandom"
]
