[package]
authors = [
    'ashWhiteHat<phantomofrotten@gmail.com>',
    'KiriosK<KiriosK@yandex.ru>'
]
name = "zkstd"
description = 'modern crypto primitive library'
version = "0.0.11"
edition = "2021"
license = "Apache-2.0"
homepage = 'https://github.com/KogarashiNetwork/Kogarashi/'
repository = 'https://github.com/KogarashiNetwork/Kogarashi/'
readme = 'README.md'

[dependencies]
paste = "1.0.11"
rand_core = { version="0.6.4", default-features = false }
sp-std = { version = '3.0.0', default-features = false }
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }

[dev-dependencies]
jub-jub = { version = '0.0.11', default-features = false }
bls-12-381 = { version = '0.0.11', default-features = false }
serde = { version = "1.0.102", default-features = false, features = ["derive"] }

[[test]]
name = "arithmetics"
path = "tests/limbs.rs"

[features]
default = ["std"]
std = ["rand_core/getrandom"]
